Two hyphens that should be minus signs.
Proposed earlier by Bernhard R. Link.

--- a/doc/ratpoison.mdoc.1
+++ b/doc/ratpoison.mdoc.1
@@ -79,7 +79,7 @@ Show summary of options.
 Execute commands given with
 .Fl c
 or
-.Fl -command
+.Fl \-command
 in interactive mode.
 That means it will behave exactly as if called with
 .Ic C\-t \&:
@@ -712,7 +712,7 @@ Output the list of all screens.
 The screens are separated by commas. Each screen is shown as 6 values:
 its number, its x-coordinate, its y-coordinate, its width, its height
 and if it is currently selected (1=true, 0=false).
-.It Ic select ( Cm \- | Ar name | Ar number ) Pq Ic C-t \&'
+.It Ic select ( Cm \- | Ar name | Ar number ) Pq Ic C\-t \&'
 If a number is given, switch to the window with number
 .Ar number .
 If a name is given, switch to the window in the current group with
