--- a/README
+++ b/README
@@ -17,7 +17,7 @@ terminal market.
 
 All interaction with the window manager is done through
 keystrokes. ratpoison has a prefix map to minimize the key clobbering
-that cripples EMACS and other quality pieces of software.
+that cripples Emacs and other quality pieces of software.
 
 Building
 --------
