--- a/NEWS
+++ b/NEWS
@@ -1,11 +1,21 @@
 ratpoison NEWS --- history of user-visible changes.  -*- outline -*-
 
 Copyright (C) 2000, 2001, 2002, 2003, 2004 Shawn Betts
-Copyright (C) 2013, 2014 Jérémie Courrèges-Anglas
+Copyright (C) 2013, 2014, 2016 Jérémie Courrèges-Anglas
 
 Copying and distribution of this file, with or without modification,
 are permitted in any medium without royalty provided the copyright
 notice and this notice are preserved.
+
+* Changes since 1.4.8
+** `msgwait' is now a variable
+The msgwait command will stay around for a few releases.
+
+** better `select' error handling
+
+** no more timestamps in compiled code
+
+** various cleanups and minor bugfixes
 
 * Changes since 1.4.7
 This is mostly a bugfix release.
