--- a/doc/ratpoison.mdoc.1
+++ b/doc/ratpoison.mdoc.1
@@ -1145,6 +1145,13 @@ The duration the message window is shown.
 If
 .Ar seconds
 is zero, wait infinitely.
+.It Cm framemsgwait Ar seconds
+The duration the
+.Ql Current frame
+indicator is shown.
+If
+.Ar seconds
+is zero, wait until the next interactive command.
 .Pp
 Default is
 .Li 0
