Also document the switchscreen hook in the manpage

--- a/doc/ratpoison.mdoc.1
+++ b/doc/ratpoison.mdoc.1
@@ -158,6 +158,8 @@ Run after a frame actually switched, but before the window in it is
 focused.
 .It Cm switchgroup
 Run after selecting a new group.
+.It Cm switchscreen
+Run when the user switches to a different screen.
 .It Cm switchwin
 Run after a new window is selected.
 (With dedication, it may already be inactive again, if it was put into
