--- a/doc/ratpoison.mdoc.1
+++ b/doc/ratpoison.mdoc.1
@@ -1132,6 +1132,11 @@ indicator is shown.
 If
 .Ar seconds
 is zero, wait until the next interactive command.
+If
+.Ar seconds
+is
+.Li -1 ,
+don't show any message.
 .It Cm startupmessage Li 0 | 1
 Decide whether to show a greeting message at startup.
 .It Cm warp Li 0 | 1
