--- a/NEWS
+++ b/NEWS
@@ -9,25 +9,45 @@ notice and this notice are preserved.
 
 * Changes since 1.4.8
 
-** Xrandr support
+** Packaging changes
+
+*** ratpoison now depends on libXrandr instead of libXinerama
+
+*** no ChangeLog file
+Please use the git repository instead.  Savannah offers a web interface.
+
+*** no more timestamps in compiled code
+Should help reproducible builds.
+
+** Incompatible changes
+
+*** command `compat' and the various def* compat commands were removed
+
+*** `msgwait', `rudeness', `startupmessage', `warp' are now variables
+The msgwait, rudeness, startup_message and warp commands will stay
+around for a few releases.  Upgrade your config file now!
+
+*** Xinerama users may experience problems
+ratpoison doesn't use Xinerama any more, it uses Xrandr instead.  It is
+unknown how ratpoison behaves in a multiple screens Xinerama setup.
+
+** Feature/misc changes
+
+*** Xrandr support
 ratpoison now uses Xrandr to detect screens additions/removals at
 runtime.  The Xinerama support has been removed.
 
-** `msgwait' is now a variable
-The msgwait command will stay around for a few releases.
+*** window completion match by substring, case-insensitive
 
-** new variable `framemsgwait'
+*** new variable `framemsgwait'
 Timeout (in seconds) for the `Current frame' message window.
 If set to -1, no message is shown.
 
-** better `select' error handling
+*** better `select' error handling
 
-** no more timestamps in compiled code
+*** the command `set' with no argument dumps a list of all variables/values
 
-** various cleanups and minor bugfixes
-
-** no ChangeLog file
-Please use the git repository instead.  Savannah offers a web interface.
+*** various cleanups and minor bugfixes
 
 * Changes since 1.4.7
 This is mostly a bugfix release.
