--- a/NEWS
+++ b/NEWS
@@ -43,6 +43,8 @@ runtime.  The Xinerama support has been removed.
 Timeout (in seconds) for the `Current frame' message window.
 If set to -1, no message is shown.
 
+*** the focus* commands can be used to navigate to other screens
+
 *** better `select' error handling
 
 *** the command `set' with no argument dumps a list of all variables/values
