Fix doc for 'resize'.
Spotted by user 'brainwash', thanks!

--- a/doc/ratpoison.mdoc.1
+++ b/doc/ratpoison.mdoc.1
@@ -667,7 +667,7 @@ grow vertically
 shrink vertically
 .It Ic C\-f , Right , l
 grow horizontally
-.It Ic C\-b , Up , h
+.It Ic C\-b , Left , h
 shrink horizontally
 .It Ic s
 shrink to size of current window
