Fix mdoc syntax
.Dd takes [month day, year], not year-month-day.  Spotted by brainwash.

--- a/doc/ratpoison.mdoc.1
+++ b/doc/ratpoison.mdoc.1
@@ -22,7 +22,7 @@
 .\" [2] http://mdocml.bsd.lv/
 .\" [3] http://mdocml.bsd.lv/mdoc.7.html
 .\"
-.Dd 2017-03-09
+.Dd March 3, 2017
 .Dt RATPOISON 1
 .Os
 .Sh NAME
