%x formats the xrandr screen number
Defaults to the screen number if XRandR isn't available

--- a/doc/ratpoison.mdoc.1
+++ b/doc/ratpoison.mdoc.1
@@ -909,7 +909,7 @@ width of the window
 .It Li %W
 unit to resize the window horizontally (width_inc)
 .It Li %x
-xine screen number
+xrandr screen number
 .It Li %%
 litteral
 .Ql %
